<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.reg.SignInFragment">

    <ImageView
        android:id="@+id/ivSignIn"
        android:layout_width="186dp"
        android:layout_height="194dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_globe"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/m_plus_1p"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/enter_login"
        android:background="@drawable/bg_et"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="16dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/bg_et"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/enter_password"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:drawableEnd="@drawable/ic_eye"/>
    
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="@dimen/cornerRadius_10dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_do_not_have_account"
        android:fontFamily="@font/m_plus_1p"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="41dp"/>
</LinearLayout>